--- a/sled_groups/templates/sled_groups/group_detail.html
+++ b/sled_groups/templates/sled_groups/group_detail.html
@@ -10,24 +10,41 @@
 
 <div class="jb-container">
   <h1 class="jb-heading-1">{{ group.name }}</h1>
-  <br>
+  <p style="margin-bottom:2px">
+    Created at: {{ group.created_at }}
+  </p>
+
+  <!-- Recent activity div -->
+  <div class="jb-activity">
+    {% activity_stream 'target' group %}
+    {% include "activity_summary.html" with stream=stream max_entries=5 %}
+    {% if stream|length > 5 %}
+    <a href="#myModal" data-toggle="modal" data-target="#myModal">Display all activity</a>
+    {% include "activity_all_modal.html" with stream=stream %}
+    {% endif %}
+  </div>
 
   <!-- Div with some information about the group -->
   <div>
-    <p> Description: {{ group.description }}</p>
-    <p> Owner: {{ group.owner }}</p>
-    <p> Number of members: {{ group.user_set.all|length }}</p>
-    <p> Access to private objects: (coming soon)</p>
+    <h1 class="jb-heading-2">Group Information</h1>
+    <table>
+      <tr>
+        <th>Owner</th>
+        <th>Number of members</th>
+        <th>Access to private objects</th>
+        <th>Description</th>
+      </tr>
+      <tr>
+        <td><a href="{{ group.owner.get_absolute_url }}">{{ group.owner }}</a></td>
+        <td>{{ group.user_set.all|length }}</td>
+        <td>Coming soon</td>
+        <td>{{ group.description }}</td>
+      </tr>
+    </table>
   </div>
-
+  
   <!-- List sensitive group details (group members, activity stream, access to objects, etc) -->
   {% if user == group.owner or request.user|has_group:group.name %}
-  <div class="jb-activity">
-    {% activity_stream 'target' group %}
-    {% include "activity_container.html" with stream=stream %}
-  </div>
-
-
 
   <!-- Div with different actions depending on if the user is owner, member, or neither -->
   <div>
