--- a/templates/activity_summary.html
+++ b/templates/activity_summary.html
@@ -2,149 +2,156 @@
 {% load project_tags %}
 
 {% if stream %}
+
+
 <table class="jb-activity">
   <tbody>
-    {% for action in stream %}
+
+    {% with  activityCount=max_entries|stringformat:"s" %}
+    {% with  activitySlice=":"|add:activityCount %}
+    
+    {% for action in stream|slice:activitySlice %}
     {% with N=action.action_object.myitems.all|length %}
-    {% if N > 0 or action.data.object_names|length > 0 %}
-    <tr class="sled-action-row" data-index="{{ forloop.counter0 }}">
-      <td style="text-align:left">
-
-
-        {% if action.verb == "Add" %}
-        {% if N == 1 %}
-        1 new {{ action.action_object.item_type|get_name_singular }} was
-        {% else %}
-        {{ N }} new {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        added
-
-
-        {% elif action.verb == "AddData" %}
-        {% if N == 1 %}
-        1 new {{ action.action_object.item_type|get_name_singular }} was
-        {% else %}
-        {{ N }} new {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        added
-
-
-        {% elif action.verb == "UpdateSelf" %}
-        Field(s) were updated
-
-
-        {% elif action.verb == "Update" %}
-        {% if N == 1 %}
-        1 {{ action.action_object.item_type|get_name_singular }} was
-        {% else %}
-        {{ N }} {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        updated
-
-
-        {% elif action.verb == "DeleteObject" %}
-        {% if N == 1 %}
-        1 {{ action.action_object.item_type|get_name_singular }} was
-        {% else %}
-        {{ N }} {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        deleted
-
-
-        {% elif action.verb == "LeftGroup" %}
-        User <a href="{{ action.data.user_url }}" target="_blank">{{ action.data.user_name }}</a> left the group
-
-
-        {% elif action.verb == "RemovedFromGroup" %}
-        {% if N == 1 %}
-        1 {{ action.action_object.item_type|get_name_singular }} was
-        {% else %}
-        {{ N }} {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        removed from the group
-
-
-        {% elif action.verb == "AddedToGroup" %}
-        {% if N == 1 %}
-        1 {{ action.action_object.item_type|get_name_plural }} was
-        {% else %}
-        {{ N }} {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        added to the group
-
-
-        {% elif action.verb == "AddedToCollection" %}
-        {% if N == 1 %}
-        1 {{ action.action_object.item_type|get_name_singular }} was
-        {% else %}
-        {{ N }} {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        added to the collection
-
-
-        {% elif action.verb == "RemovedFromCollection" %}
-        {% if N == 1 %}
-        1 {{ action.action_object.item_type|get_name_plural }} was
-        {% else %}
-        {{ N }} {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        removed from the collection
-
-
-        {% elif action.verb == "MadePublicGroup" %}
-        {% if N == 1 %}
-        1 private {{ action.action_object.item_type|get_name_singular }} that the group had access to was
-        {% else %}
-        {{ N }} private {{ action.action_object.item_type|get_name_plural }} that the group had access to were
-        {% endif %}
-        made public
-
-
-        {% elif action.verb == "MadePublic" %}
-        {% if N == 1 %}
-        1 {{ action.action_object.item_type|get_name_plural }} was
-        {% else %}
-        {{ N }} {{ action.action_object.item_type|get_name_plural }} were
-        {% endif %}
-        made public
-
-
-        {% elif action.verb == "GiveAccess" %}
-        The group was granted access to {{ N }} private {% singular_or_plural action.action_object.item_type N %}
-
-
-        {% elif action.verb == "RevokeAccess" %}
-        The group's access to {{ N }} private {% singular_or_plural action.action_object.item_type N %} was revoked
-
-
-        {% elif action.verb == "CedeOwnershipSelf" %}
-        The owner changed from <a href="{{ action.data.previous_owner_url }}" target="_blank">{{ action.data.previous_owner }}</a>
-        to <a href="{{ action.data.next_owner_url }}" target="_blank">{{ action.data.next_owner }}</a>
-
-
-        {% elif action.verb == "CedeOwnership" %}
-        {{ N }} private {% singular_or_plural action.action_object.item_type N %}
-        the group has access to changed owner
-        from <a href="{{ action.data.previous_owner_url }}" target="_blank">{{ action.data.previous_owner }}</a>
-        to <a href="{{ action.data.next_owner_url }}" target="_blank">{{ action.data.next_owner }}</a>
-
-
-        {% endif %}
-      </td>
+    <tr>
       <td>
-        {{ action.timestamp|timesince }} ago
+	<div  class="sled-action-row" data-index="{{ forloop.counter0 }}" style="display:inline-block;">
+	  
+          {% if action.verb == "Add" %}
+          {% if N == 1 %}
+          1 new {{ action.action_object.item_type|get_name_singular }} was
+          {% else %}
+          {{ N }} new {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          added
+
+
+          {% elif action.verb == "AddData" %}
+          {% if N == 1 %}
+          1 new {{ action.action_object.item_type|get_name_singular }} was
+          {% else %}
+          {{ N }} new {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          added
+
+
+          {% elif action.verb == "UpdateSelf" %}
+          Field(s) were updated
+
+
+          {% elif action.verb == "Update" %}
+          {% if N == 1 %}
+          1 {{ action.action_object.item_type|get_name_singular }} was
+          {% else %}
+          {{ N }} {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          updated
+
+
+          {% elif action.verb == "DeleteObject" %}
+          {% if N == 1 %}
+          1 {{ action.action_object.item_type|get_name_singular }} was
+          {% else %}
+          {{ N }} {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          deleted
+
+
+          {% elif action.verb == "LeftGroup" %}
+          User <a href="{{ action.data.user_url }}" target="_blank">{{ action.data.user_name }}</a> left the group
+
+
+          {% elif action.verb == "RemovedFromGroup" %}
+          {% if N == 1 %}
+          1 {{ action.action_object.item_type|get_name_singular }} was
+          {% else %}
+          {{ N }} {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          removed from the group
+
+
+          {% elif action.verb == "AddedToGroup" %}
+          {% if N == 1 %}
+          1 {{ action.action_object.item_type|get_name_plural }} was
+          {% else %}
+          {{ N }} {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          added to the group
+
+
+          {% elif action.verb == "AddedToCollection" %}
+          {% if N == 1 %}
+          1 {{ action.action_object.item_type|get_name_singular }} was
+          {% else %}
+          {{ N }} {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          added to the collection
+
+
+          {% elif action.verb == "RemovedFromCollection" %}
+          {% if N == 1 %}
+          1 {{ action.action_object.item_type|get_name_plural }} was
+          {% else %}
+          {{ N }} {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          removed from the collection
+
+
+          {% elif action.verb == "MadePublicGroup" %}
+          {% if N == 1 %}
+          1 private {{ action.action_object.item_type|get_name_singular }} that the group had access to was
+          {% else %}
+          {{ N }} private {{ action.action_object.item_type|get_name_plural }} that the group had access to were
+          {% endif %}
+          made public
+
+
+          {% elif action.verb == "MadePublic" %}
+          {% if N == 1 %}
+          1 {{ action.action_object.item_type|get_name_plural }} was
+          {% else %}
+          {{ N }} {{ action.action_object.item_type|get_name_plural }} were
+          {% endif %}
+          made public
+
+
+          {% elif action.verb == "GiveAccess" %}
+          The group was granted access to {{ N }} private {% singular_or_plural action.action_object.item_type N %}
+
+
+          {% elif action.verb == "RevokeAccess" %}
+          The group's access to {{ N }} private {% singular_or_plural action.action_object.item_type N %} was revoked
+
+
+          {% elif action.verb == "CedeOwnershipSelf" %}
+          The owner changed from <a href="{{ action.data.previous_owner_url }}" target="_blank">{{ action.data.previous_owner }}</a>
+          to <a href="{{ action.data.next_owner_url }}" target="_blank">{{ action.data.next_owner }}</a>
+
+
+          {% elif action.verb == "CedeOwnership" %}
+          {{ N }} private {% singular_or_plural action.action_object.item_type N %}
+          the group has access to changed owner
+          from <a href="{{ action.data.previous_owner_url }}" target="_blank">{{ action.data.previous_owner }}</a>
+          to <a href="{{ action.data.next_owner_url }}" target="_blank">{{ action.data.next_owner }}</a>
+
+          {% endif %}
+
+          {{ action.timestamp|timesince }} ago
+	</div>
       </td>
     </tr>
-    {% endif %}
     {% endwith %}
     {% endfor %}
+    {% endwith %}
+    {% endwith %}
   </tbody>
 </table>
+
+
 
 <div style="display:none">
   {% for action in stream %}
   {% with N=action.action_object.myitems.all|length %}
-  {% if N > 0 or action.data.object_names|length > 0 %}
+
   <div id="tooltip-{{ forloop.counter0 }}">
 
 
@@ -373,11 +380,11 @@
     to
     <a href="{{ action.data.next_owner_url }}" target="_blank">{{ action.data.next_owner }}</a>
     at <em>{{ action.timestamp }}</em>
-
-
+    
+    
     {% endif %}
   </div>
-  {% endif %}
+  
   {% endwith %}
   {% endfor %}
 </div>
@@ -390,31 +397,31 @@
 
 <script>
   $('.sled-dirty-fields').each(function(index) {
-    var fields = JSON.parse($(this).html());
-    var new_html = $('<table>').addClass('jb-fields-update-table');
-    const keys = Object.keys(fields);
-    keys.forEach((key, index) => {
-      var tr = $('<tr>');
-      tr.append('<td>' + key + ':</td>');
-      tr.append('<td>' + fields[key]['saved'] + '</td>');
-      tr.append('<td>&rarr;</td>');
-      tr.append('<td>' + fields[key]['current'] + '</td>');
-      new_html.append(tr);
-    });
-    $(this).html(new_html);
-  });
-
-  $('.sled-action-row').each(function() {
-    var mycontent = $("#tooltip-" + String($(this).attr('data-index'))).html().trim();
-    if (mycontent != 'NONE') {
-      $(this).tooltipster({
-        position: 'left',
-        theme: 'tooltipster-shadow',
-        interactive: true,
-        contentAsHTML: true,
-        content: mycontent,
+      var fields = JSON.parse($(this).html());
+      var new_html = $('<table>').addClass('jb-fields-update-table');
+      const keys = Object.keys(fields);
+      keys.forEach((key, index) => {
+	  var tr = $('<tr>');
+	  tr.append('<td>' + key + ':</td>');
+	  tr.append('<td>' + fields[key]['saved'] + '</td>');
+	  tr.append('<td>&rarr;</td>');
+	  tr.append('<td>' + fields[key]['current'] + '</td>');
+	  new_html.append(tr);
       });
-    }
+      $(this).html(new_html);
+  });
+  
+  $('.sled-action-row').each(function() {
+      var mycontent = $("#tooltip-" + String($(this).attr('data-index'))).html().trim();
+      if (mycontent != 'NONE') {
+	  $(this).tooltipster({
+              position: 'right',
+              theme: 'tooltipster-shadow',
+              interactive: true,
+              contentAsHTML: true,
+              content: mycontent,
+	  });
+      }
   });
 </script>
 
