--- a/sled_data/templates/sled_data/imaging_detail.html
+++ b/sled_data/templates/sled_data/imaging_detail.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 <table>
+  <tr><td>Owner:</td><td>{{ imaging.owner }}</td></tr>
+  <tr><td>Access level:</td><td>{{ imaging.access_level }}</td></tr>
   <tr><td>Date taken:</td><td>{{ imaging.date_taken }}</td></tr>
   <tr><td>Exp. time:</td><td>{{ imaging.exposure_time }}</td></tr>
   <tr><td>Pixel size:</td><td>{{ imaging.pixel_size }}</td></tr>
