--- a/templates/activity_all.html
+++ b/templates/activity_all.html
@@ -46,6 +46,12 @@
 	at <em>{{ action.timestamp }}</em>
 
 
+	{% elif action.verb == "RemoveData" %}
+	Data taken in {{ action.data.instrument }} - {{ action.data.band }} removed by
+	<a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
+	at <em>{{ action.timestamp }}</em>
+    
+
 	{% elif action.verb == "UpdateSelf" %}
 	The following updates were performed on this {{ action.data.object_type }}:
 	<div class="sled-dirty-fields">
