Added scrolling to the pagination div in the user's profile

--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -280,10 +280,10 @@
 
 
    
-   <div id="lenses" class="c">
-     <input class="accordion-checkbox" type="checkbox" id="faq-6">
+   <div class="c">
+     <input class="accordion-checkbox" type="checkbox" id="lenses">
      <h1 class="jb-heading-2">
-       <label for="faq-6">
+       <label for="lenses">
 	 My Lenses ({{ N_lenses_total }})
        </label>
      </h1>
@@ -342,9 +342,9 @@
 
 
    <div class="c">
-     <input class="accordion-checkbox" type="checkbox" id="faq-7">
+     <input class="accordion-checkbox" type="checkbox" id="imagings">
      <h1 class="jb-heading-2">
-       <label for="faq-7">
+       <label for="imagings">
 	 My Imaging data ({{ N_imagings_total }})
        </label>
      </h1>
